--- a/views/admin/01-admin-dashboard.hbs
+++ b/views/admin/01-admin-dashboard.hbs
@@ -23,6 +23,7 @@
                 <span>Industries</span> </a></li>
         <li><a href="/admin/view-all-jobs"> <i class="fas fa-users"></i>&nbsp; <span>Jobs</span> </a></li>
         <li><a href="http://localhost:8000/"> <i class="fas fa-users"></i>&nbsp; <span>Platforms</span> </a></li>
+        <li><a href="/admin/addCertificate"> <i class="fas fa-users"></i>&nbsp; <span>add certificate</span></a></li>
         {{!-- <li><a href="http://localhost:8000/teacher/teacherclick">Teacher</a></li> --}}
         {{!-- <li><a href="/admin/view-all-libraries"> <i class="fa-solid fa-book-open"></i>&nbsp; --}}
                 {{!-- <span>libraries</span> </a></li> --}}
