--- a/views/admin/edit-hospital.hbs
+++ b/views/admin/edit-hospital.hbs
@@ -8,7 +8,7 @@
 <div class="login-page">
     <div class="form">
         <div>
-            <h2 class="title" style="color: #2c3e50;">Edit Hospital Details</h2>
+            <h2 class="title" style="color: #2c3e50;">Edit class Details</h2>
         </div>
         <form class="login-form" action="/admin/edit-hospital/{{hospital._id}}" method="post"
             enctype="multipart/form-data">
