--- a/views/student/view-hospitals.hbs
+++ b/views/student/view-hospitals.hbs
@@ -7,7 +7,7 @@
 </style>
 
 <nav class="navbar navbar-light bg-light mb-5 d-flex justify-content-space-between">
-    <h1 class="ms-3">Hospitals</h1>
+    <h1 class="ms-3">Sessions</h1>
     <a class="btn-danger me-5 p-2" href="/" style="text-decoration: none;">Back</a>
 </nav>
 
@@ -33,7 +33,7 @@
         {{/each}}
         {{else}}
         <center>
-            <h1 style="color:white; transform:scale(1.2);transition:all 0.5s ease;">No Hospitals Found !!!!</h1>
+            <h1 style="color:white; transform:scale(1.2);transition:all 0.5s ease;">No sessions Found !!!!</h1>
         </center>
         {{/if}}
     </div>
