--- a/onlinexamination/templates/student/studentbase.html
+++ b/onlinexamination/templates/student/studentbase.html
@@ -187,7 +187,7 @@
     <a href="/student/student-exam"><i class="fas fa-book"></i><span>Examination</span></a>
     <a href="http://localhost:4000/admin/addDocs" target="_blank"><i class="fas fa-book"></i><span>Share Material</span></a>
     <a href="http://localhost:4000/admin/addDocs" target="_blank"><i class="fas fa-book"></i><span>View Materials</span></a>
-    <a href="http://localhost:4000/admin/addDocs" target="_blank"><i class="fas fa-book"></i><span>View Courses</span></a>
+    <a href="http://localhost:4000/admin/addDocs" target="_blank"><i class="fas fa-book"></i><span>Add docs</span></a>
     <a href="http://localhost:4000/search-hospitals" target="_blank"><i class="fas fa-book"></i><span>View clasess</span></a>
 
     <a href="http://localhost:4000/admin/getDoc"><i class="fas fa-sort-numeric-up"></i><span>My Marks</span></a>
