--- a/views/home-page.hbs
+++ b/views/home-page.hbs
@@ -16,13 +16,13 @@
                 </li>
             </ul>
             <div class="d-flex">
-                <a href="/login"><button class="btn btn-outline-light border-0">Login as student</button></a>
+                {{!-- <a href="/login"><button class="btn btn-outline-light border-0">Login as student</button></a> --}}
                 <a href="http://localhost:3000/signup"><button class="btn btn-outline-light border-0">Login as Job
                         seeker</button></a>
                 {{!-- <a href="/tourist/login"><button class="btn btn-outline-light border-0">Login as Tourist</button></a> --}}
                 <a href="/admin/login"><button class="btn btn-outline-light border-0">Login as admin</button></a>
                 {{!-- <a href=""><button class="btn btn-outline-light border-0">Login as Placementcell</button></a> --}}
-                <a href="http://localhost:8000/teacher/teacherclick"><button class="btn btn-outline-light border-0">Login as Teachers</button></a>
+                <a href="http://localhost:8000/teacher/teacherclick"><button class="btn btn-outline-light border-0">Login Exam</button></a>
 
 
             </div>
